# gradient_based_speach_xai

./: .gitignore  README.md  pyproject.toml  requirements.txt  skill.md
configs/: default.yaml
data/: README.md  iemocap_dataset_analysis.ipynb
docs/: .gitignore  README.md  progress_report.tex
notebooks/: 01_inference_iemocap.ipynb  01_speechxai_single_example.ipynb  02_attention_access_test.ipynb  03_attention_gradient_test.ipynb  04_legrad_temporal_explanation.ipynb  05_quantitative_evaluation.ipynb  05_speechxai_explanations.ipynb  06_qualitative_examples.ipynb  06_unified_interval_masking.ipynb  07_deletion_evaluation.ipynb  08_qualitative_examples.ipynb  09_final_results_summary.ipynb
references/: Baevski_2020_wav2vec2.md  Bain_2023_WhisperX.md  Bousselham_2024_LeGrad.md  Busso_2008_IEMOCAP.md  Pastor_2024_SpeechXAI.md  README.md
results/: README.md
scripts/: build_iemocap_metadata.py  run_deletion_evaluation.py  run_inference.py
src/speech_xai_project/: __init__.py  audio.py  config.py  evaluation.py  intervals.py  legrad.py  masking.py  model.py  plotting.py
