[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradient-based-speech-xai"
version = "0.1.0"
description = "LeGrad-inspired temporal explanations for speech emotion recognition, compared with SpeechXAI."
requires-python = ">=3.10"
dependencies = [
  "jupyterlab>=4",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scipy>=1.11",
  "seaborn>=0.13",
  "soundfile>=0.12",
  "speechbrain>=1.0,<1.1",
  "torch>=2.1",
  "torchaudio>=2.1",
  "transformers>=4.40,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts"]
