[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradient-based-speech-xai"
version = "0.1.0"
description = "LeGrad-inspired temporal explanations for speech emotion recognition, compared with SpeechXAI."
requires-python = ">=3.10"
dependencies = [
  "imageio-ffmpeg>=0.6",
  "jupyterlab>=4",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "pydub>=0.25",
  "pyyaml>=6.0",
  "scipy>=1.11",
  "seaborn>=0.13",
  "soundfile>=0.12",
  "torch>=2.1",
  "torchaudio>=2.1",
  "transformers>=4.40,<5",
  "whisperx==3.3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts"]
